IMCMS-300 - New design to superadmin-pages: - Fixed z-index for info page class.

--- a/src/main/webapp/css/imcms-info-page.css
+++ b/src/main/webapp/css/imcms-info-page.css
@@ -10,7 +10,7 @@
     width: 640px;
     top: 100px;
     left: 50%;
-    z-index: 10005;
+    z-index: 10004;
 }
 
 .imcms-info-head {
